[gdb/dap] Disable DAP for python <= 3.5

DAP requires python module typing, which is supported starting python 3.5.

Make this formal by:
- disabling the dap interpreter for python version < 3.5
- returning 0 in allow_dap_tests for python version < 3.5

Approved-By: Tom Tromey <tom@tromey.com>

PR dap/30708
Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=30708